--- a/src/shared/personal-finance-layout/app-area-navigation/app-area-navigation.component.less
+++ b/src/shared/personal-finance-layout/app-area-navigation/app-area-navigation.component.less
@@ -165,7 +165,7 @@
         right: unset!important;
         @media all and (max-width: 767px) {
             right: 0 !important;
-            height: calc(~"100vh - 80px");
+            height: calc(~"100vh - 90px");
             overflow: auto;
         }
         &.show {
